use JAVA_HOME