@@ -15,12 +15,13 @@ curl -L -o jars/install4j-runtime.jar 'https://maven.ej-technologies.com/reposit
 
 find override -type f -name '*.java' -exec javac '{}' \;
 
-java \
+"${JAVA_HOME?no JAVA_HOME}/bin/java" \
     -Duser.home="$PWD/home" \
     -Dde.bookman.deployMode=LIVE \
     -Dde.bookman.javaBackendUri=https://cockpit.bookman-gmbh.de/api/java/ \
     -Dde.bookman.microsoftApplicationId=a7719d9a-1877-4bd1-a3c7-e3f8edf86485 \
     -Dde.bookman.microsoftSsoRedirectUrl=http://localhost:4826 \
-    -cp 'override/:/usr/lib/jvm/java-17-openjdk/lib/*:jars/*' \
+    --add-modules ALL-MODULE-PATH \
+    -cp "$PWD/override/:${JAVA_HOME?no JAVA_HOME}/lib/*:$PWD/jars/*" \
     de.bookman.start.MainGradle
 
